Fixed dark mode for card component page

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -1,5 +1,8 @@
 @import "@material/theme/color-palette";
 
+$mdc-typography-font-family: var(--font-family);
+@import "@material/typography/mdc-typography";
+
 :root {
     --primary-100: #ebf8ff;
     --primary-200: #bee3f8;
@@ -28,6 +31,8 @@
     --font-color: hsl(0, 0%, 12.9%);
     --other-font-color: hsl(0, 0%, 0%);
     --bg-color: hsl(0, 0%, 100%);
+    --bg-layer-color: hsl(0, 0%, 96.1%);
+    --bg-card-color: hsl(0, 0%, 100%);
     --enabled-color: hsl(0, 0%, 45.9%);
     --disabled-color: hsl(0, 0%, 74.1%);
     --switch-toggle-color: hsl(0, 0%, 98%);
@@ -35,6 +40,14 @@
     --font-family: "Montserrat", sans-serif;
     --filter: invert(0%);
     // $mdc-text-field-ink-color: black;
+
+    --alert-default-bg-color: var(--primary-200);
+    --alert-solid-bg-color: var(--primary-700);
+    --alert-solid-text-color: "text-white";
+    --alert-outline-bg-color: var(--primary-100);
+    --alert-outline-border-color: var(--primary-400);
+    --alert-outline-border-color2: var(--primary-600);
+    --alert-outline-text-color: var(--primary-800);
 }
 
 [data-theme="dark"] {
@@ -45,7 +58,9 @@
     --disabled-button-bg-color: hsl(0, 0%, 12.2%);
     --font-color: hsl(0, 0%, 87.1%);
     --other-font-color: hsl(0, 0%, 100%);
-    --bg-color: hsl(0, 0%, 3%);
+    --bg-color: hsl(0, 0%, 7.1%);
+    --bg-layer-color: hsl(0, 0%, 20%);
+    --bg-card-color: hsl(0, 0%, 25.9%);
     --enabled-color: hsl(0, 0%, 70.2%);
     --disabled-color: hsl(0, 0%, 30.2%);
     --switch-toggle-color: hsl(0, 0%, 70%);
@@ -59,6 +74,7 @@ body {
     --mdc-theme-on-primary: var(--primary-font-color);
     --mdc-theme-on-secondary: var(--secondary-font-color);
     --mdc-text-field-ink-color: var(--other-font-color);
+    --mdc-theme-text-primary-on-background: var(--font-color);
     // --mdc-theme-surface: var(--bg-color);
     --mdc-theme-surface: transparent;
     --duration: 0.5s;
@@ -66,10 +82,9 @@ body {
     background-color: var(--bg-color);
     color: var(--font-color);
     transition: color var(--duration) var(--timing), background-color var(--duration) var(--timing);
-    font-family: var(--font-family, "Montserrat", sans-serif);
+    font-family: var(--font-family);
 }
 
-$mdc-typography-font-family: var(--font-family, "Montserrat", sans-serif);
 // $mdc-button-shape-radius: 999px;
 
 $mdc-theme-error: $material-color-red-900;
@@ -184,6 +199,12 @@ $mdc-switch-baseline-theme-color: primary !default;
 
 .mdc-switch--disabled {
     opacity: 0.5;
+}
+
+// Card
+
+.mdc-card__action--icon:not(:disabled) {
+    color: var(--enabled-color);
 }
 
 // .mdc-checkbox__native-control[disabled]:not(:checked):not(:indeterminate) ~ .mdc-checkbox__background {
